--- a/main.html
+++ b/main.html
@@ -58,7 +58,7 @@
           />
           <div class="overlay">
             <h1>About</h1>
-            <button><a href="imgs.html">About Us</a></button>
+            <button><a href="about.html">About Us</a></button>
           </div>
         </div>
 
