--- a/collections.html
+++ b/collections.html
@@ -24,7 +24,7 @@
     </div>
     <header class="header">
       <nav class="navbar">
-        <a href="main.html" class="logo"
+        <a href="index.html" class="logo"
           ><img
             src="./images/imageinfinityhub-high-resolution-logo-transparent.svg"
             alt="logo"
