--- a/imgs.html
+++ b/imgs.html
@@ -28,7 +28,7 @@
           <a href="collections.html">My Collection</a>
           <a href="liked-photos.html">Liked Photos</a>
         </div>
-        <a href="main.html" class="logo"
+        <a href="index.html" class="logo"
           ><img
             src="./images/imageinfinityhub-high-resolution-logo-transparent.svg"
             alt="logo"
